Several improvements